--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-media": "^1.10.0",
+    "react-responsive": "^8.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
