--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "backendpart",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "prod": "SET NODE_ENV=production & nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/MarinaSergeyeva/FinancialAssistant/issues"
   },
-  "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme"
+  "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.6",
+    "prettier": "2.1.2"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.14",
+    "mongoose-paginate-v2": "^1.3.11",
+    "morgan": "^1.10.0",
+    "uuidv4": "^6.2.5"
+  }
 }
