--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+/frontend/node_modules
+/backend/node_modules
+/frontend/.pnp
+/backend/.pnp
+/frontend/.pnp.js
+/backend/.pnp.js
 
 # testing
 /coverage
@@ -12,11 +15,11 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/backend/.DS_Store
+/backend/.env.local
+/backend/.env.development.local
+/backend/.env.test.local
+/backend/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
