--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /frontend/node_modules
 /backend/node_modules
+# /backend/.env
 /frontend/.pnp
 /backend/.pnp
 /frontend/.pnp.js
@@ -15,11 +16,12 @@
 /build
 
 # misc
-/backend/src/.DS_Store
-/backend/src/.env.local
-/backend/src/.env.development.local
-/backend/src/.env.test.local
-/backend/src/.env.production.local
+/backend/.env
+/backend/.DS_Store
+/backend/.env.local
+/backend/.env.development.local
+/backend/.env.test.local
+/backend/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
