--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-redux": "^7.2.2",
     "react-responsive": "^8.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
