--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
