--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "prettier": "2.1.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
