--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-media": "^1.10.0",
     "react-redux": "^7.2.2",
