--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "backendpart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/test/*.js",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "prod": "SET NODE_ENV=production & nodemon index.js"
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.2.1",
     "mongoose": "^5.10.14",
     "mongoose-paginate-v2": "^1.3.11",
     "morgan": "^1.10.0",
