--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "backendpart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha '**/*.spec.js' --exit",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "prod": "SET NODE_ENV=production & nodemon index.js"
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "supertest": "^6.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
