--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "supertest": "^6.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
