--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
-    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-datepicker": "^3.3.0",
@@ -19,7 +18,7 @@
     "react-responsive": "^8.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-vis": "^1.11.7",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
