--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.10.14",
     "mongoose-paginate-v2": "^1.3.11",
     "morgan": "^1.10.0",
+    "node-cron": "^2.0.3",
     "should": "^13.2.3",
     "sinon": "^9.2.1",
     "supertest": "^6.0.1",
