--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /frontend/node_modules
 /backend/node_modules
+/node_modules
 # /backend/.env
 /frontend/.pnp
 /backend/.pnp
@@ -16,7 +17,6 @@
 /build
 
 # misc
-.DS_Store
 /backend/.env
 /backend/.DS_Store
 /backend/.env.local
@@ -27,3 +27,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
