--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "joi": "^17.3.0",
@@ -39,6 +40,9 @@
     "mongoose": "^5.10.14",
     "mongoose-paginate-v2": "^1.3.11",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
     "should": "^13.2.3",
     "sinon": "^9.2.1",
     "uuidv4": "^6.2.5"
