--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "formik": "^2.2.5",
+    "gapi": "0.0.3",
     "mathjs": "^8.0.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
