save after pull

--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "passport-local": "^1.0.0",
     "should": "^13.2.3",
     "sinon": "^9.2.1",
+    "uuid4": "^2.0.2",
     "uuidv4": "^6.2.5"
   }
 }
