--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-media": "^1.10.0",
     "react-redux": "^7.2.2",
     "react-responsive": "^8.1.1",
