--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0"
   },
