--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "joi": "^17.3.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
     "mongoose-paginate-v2": "^1.3.11",
