--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/MarinaSergeyeva/FinancialAssistant/issues"
   },
-  "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme"
+  "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme",
+  "dependencies": {
+    "@date-io/luxon": "^2.10.6",
+    "luxon": "^1.25.0"
+  }
 }
