--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/MarinaSergeyeva/FinancialAssistant/issues"
   },
-  "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme"
+  "homepage": "https://github.com/MarinaSergeyeva/FinancialAssistant#readme",
+  "dependencies": {}
 }
