--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
+    "deploy": "netlify deploy --prod"
   },
   "eslintConfig": {
     "extends": [
